Мелкая правка в файле стилей с табами

--- a/less/style/wrap-tabs-block.less
+++ b/less/style/wrap-tabs-block.less
@@ -4,9 +4,11 @@ section.wrap-tabs-block {
   margin-top: 8px;
   min-height: 600px;
 
+  overflow: hidden;
+
   .changed-tab-img {
     position: absolute;
-    top: -160px;
+    top: 0px;
     left: 0;
     right: 0;
     bottom: 0;
